--- a/css/blue.css
+++ b/css/blue.css
@@ -1,10 +1,11 @@
-.header-container, .footer-container, .main aside {
+
+#header-container, #footer-container, #main aside {
 background: #369;
 }
-.header-container {
+#header-container {
 border-bottom: 20px solid #036;
 }
-.footer-container, .main aside {
+#footer-container, #main aside {
 border-top: 20px solid #036;
 }
 nav a {
